# le-transpiler

./: CMakeLists.txt  Output_transpiler.md  README.md  Transpiler_ phases.md  Unerstanding a Lexer program.md  Unerstanding_a_Lexer_program.md  ast.c  code_printer.c  introduction .MD  introduction to transpiler.md  lex.l  lexer.l  lexerc.l  lexerkf.l  notes_of_lexercode.md  par.y  parserc.y  parserkf.y  symbol_table.c  symbol_table.h  vec.c
example code of parse/: parser.md  pract.y  tp.l
include/: ast.h  code_printer.h  parser.h  symbol_table.h
include./: ast.h  code_printer.h  parser.h  parser.tab.h
src/: ast.c  code_printer.c  lex.yy.c  lexer.c  lexer.l  main.c  main1.c  parser.c  parser.h  parser.tab.c  parser.tab.h  parser.y  symbol_table.c
